--- a/theme/scss/_header-footer.scss
+++ b/theme/scss/_header-footer.scss
@@ -94,6 +94,25 @@
 	img {
 		max-width: 290px;
 	}
+
+	@media (max-width: 767px) {
+		justify-content: space-between;
+		align-items: center;
+		display: flex;
+		padding: 20px 15px;
+		img {
+			max-width: 240px;
+		}
+
+		.navbar-toggle {
+			display: inline-block;
+			background: transparent;
+			border: none;
+			color: #092d4b;
+			cursor: pointer;
+			font-size: 24px;
+		}
+	}
 }
 
 nav {
@@ -101,6 +120,11 @@ nav {
 		&.custom-nav {
 			background: #fff;
 			padding: 0.5rem 1rem;
+		}
+		@media (max-width: 767px) { 
+			&.custom-nav {
+				padding: 0;
+			}
 		}
 	}
 	.menu-header {
@@ -262,5 +286,38 @@ nav {
 				}
 			}
 		}
+	}
+}
+
+
+ul.footer-list {
+	padding: 0;
+	list-style: none;
+	margin-bottom: 25px;
+
+	@media(max-width: 767px) {
+		display: none;
+	}
+}
+
+.social-links {
+	display: flex;
+	margin-top: 20px;
+	a {
+		height: 36px;
+		width: 36px;
+		background: #2b333b;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		border-radius: 40px;
+		margin-right: 15px;
+		&:hover {
+			background: #dd9c29;
+		}
+	}
+	@media(max-width: 767px) { 
+		margin-bottom: 20px;
+		justify-content: center;
 	}
 }
